@@ -323,3 +323,4 @@
     - Función de entrada EGA abolida.
 - v.5.8.6 (2025-XX-YY)
     - Added Spanish translation.
+    - Fixed RES_save function for saving *.dll.
